Finished first draft of About section; removed unused images; added Miscellaneous section

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,13 +1,29 @@
 {% extends "layout.html" %}
 {% block content %}
 
-<!-- Header -->
-<header class="bigimg_coming_soon w3-container w3-grey w3-center w3-text-black w3-animate-opacity" style="padding:400px 16px">
-    <h1 class="w3-margin w3-jumbo">COMING SOON</h1>
-    <hr class="w3-border-black" style="margin:auto;width:40%">
-    <p class="w3-xlarge">2019</p>
-</header>
 
+<!-- Profile Picture -->
+<section class="w3-container w3-center w3-content" style="padding:50px 16px; max-width:600px">
+    <img src="https://i.ibb.co/MpZpjSW/profile.jpg" alt="profile image">
+</section>
+
+<!-- About Text -->
+<section class="w3-container w3-center w3-content" style="padding:0px 16px; max-width:600px">
+    <h2 class="w3-wide">About</h2>
+    <p class="w3-large" style="text-align: left">
+        My name is Dominique and I live in Zurich, Switzerland. I work in the financial industry and develop mostly machine learning algorithms with the 
+        purpose of predicting or understanding markets and to improve operational processes within the bank. I like this topic and I like programming,
+        so I am often doing side-projects at home which I show and explain here.
+    </p>
+    <p class="w3-large" style="text-align: left">
+        When I was younger I used to be an excited gamer and I still enjoy it from time to time. After I started to explore game development, I found it incredibly fun
+        and some projects will be shown on this site as well.
+    </p>
+
+    <p class="w3-large" style="text-align: left">
+        When I am not working on the above, I very much enjoy backpacking, skiing, snowboarding, and since recently: mountaineering!
+    </p>
+</section>
 
 
 {% endblock %}
