--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,8 +12,7 @@
     <!-- <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.4.2/css/all.css'> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <!-- <link rel="stylesheet" type="text/css" media="screen" href="/static/msain.css" /> -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">s
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
     <script src="main.js"></script>
 </head>
@@ -26,6 +25,7 @@
             <a href="/home" class="myclass w3-bar-item w3-button w3-padding-large w3-medium w3-hover-dark-grey w3-wide">Home</a>
             <a href="/ml" class="w3-bar-item w3-button w3-padding-large w3-medium w3-hover-dark-grey w3-wide">Machine Learning</a>
             <a href="/games" class="w3-bar-item w3-button w3-padding-large w3-medium w3-hover-dark-grey w3-wide">Games</a>
+            <a href="/misc" class="w3-bar-item w3-button w3-padding-large w3-medium w3-hover-dark-grey w3-wide">Miscellaneous</a>
             <a href="/about" class="w3-bar-item w3-button w3-padding-large w3-medium w3-hover-dark-grey w3-wide">About</a>
         </div>
     </div>
@@ -35,6 +35,7 @@
         <a href="/home" class="w3-bar-item w3-button w3-padding-large">Home</a>
         <a href="/ml" class="w3-bar-item w3-button w3-padding-large">Machine Learning</a>
         <a href="/games" class="w3-bar-item w3-button w3-padding-large">Games</a>
+        <a href="/misc" class="w3-bar-item w3-button w3-padding-large">Miscellaneous</a>
         <a href="/about" class="w3-bar-item w3-button w3-padding-large">About</a>
         </div>
     </div>
