--- a/templates/home.html
+++ b/templates/home.html
@@ -2,10 +2,11 @@
 {% block content %}
 
     <!-- Header -->
-    <header class="bigimg w3-container w3-grey w3-center w3-text-light-grey w3-animate-opacity" style="padding:400px 16px">
+    <header class="bigimg_home w3-container w3-grey w3-center w3-text-light-grey w3-animate-opacity" style="padding:400px 16px">
         <h1 class="w3-margin w3-jumbo">Hi.</h1>
         <p class="w3-xlarge">I hope you enjoy your stay.</p>
     </header>
+
 
     <!-- First Grid -->
     <div class="w3-row-padding w3-padding-48 w3-container">
@@ -47,7 +48,7 @@
         </div>
     </div>
 
-    s
+    
     <!-- Third Grid -->
     <div class="w3-row-padding w3-padding-48 w3-container">
         <div class="w3-content">
@@ -76,7 +77,5 @@
         <p class="w3-text-white">Punch Deck creates free to use music. A channel this talented should get more views.</p>
         <iframe height="550" width="820" frameborder="0" allowfullscreen src="https://www.youtube.com/embed/iE_2RmGWVDM"></iframe>
     </div>
-
-    
 
 {% endblock %}
