--- a/static/main.css
+++ b/static/main.css
@@ -16,7 +16,7 @@ body,h1,h2,h3,h4,h5,h6 {
 
 .bigimg_coming_soon {
     background-repeat: no-repeat;
-    background-image: url("../img/alone.jpg");
+    background-image: url("img/alone.jpg");
     min-height: 90%;
     max-height: 100%;
     background-size: cover;
@@ -25,14 +25,14 @@ body,h1,h2,h3,h4,h5,h6 {
 .bigimg_home {
     background-repeat: no-repeat;
     background-size: cover;
-    background-image: url("../img/cosmos.jpg");
+    background-image: url("img/cosmos.jpg");
     min-height: 90%;
     background-attachment: fixed;
 }
 
 .bigimg_coming_soon_ml {
     background-repeat: no-repeat;
-    background-image: url("../img/citylights.jpg");
+    background-image: url("img/citylights.jpg");
     min-height: 0%;
     max-height: 100%;
     background-size: cover;
@@ -40,7 +40,7 @@ body,h1,h2,h3,h4,h5,h6 {
 
 .bigimg_coming_soon_games {
     background-repeat: no-repeat;
-    background-image: url("../img/joystick.jpg");
+    background-image: url("img/joystick.jpg");
     min-height: 0%;
     max-height: 100%;
     background-size: cover;
@@ -49,6 +49,20 @@ body,h1,h2,h3,h4,h5,h6 {
 .about_profile_pic {
     background-repeat: no-repeat;
     background-size: auto;
-    background-image: url("../img/profile.jpg");
+    background-image: url("img/profile.jpg");
     min-height: 90%;
+}
+
+#container {
+    width: 400px;
+    height: 400px;
+    position: relative;
+    background: black;
+}
+
+#animate {
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    background: red;
 }
