--- a/templates/layout.html
+++ b/templates/layout.html
@@ -17,10 +17,10 @@
     <script src="main.js"></script>
 </head>
 
-<body>s
+<body>
     <!-- Navbar -->
     <div class="w3-top">
-        <div class="w3-bar w3-blue-grey w3-card w3-left-align w3-large">
+        <div class="w3-bar w3-dark-grey w3-card w3-left-align w3-large">
             <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-dark-grey w3-large w3-red" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
             <a href="/home" class="myclass w3-bar-item w3-button w3-padding-large w3-medium w3-hover-dark-grey w3-wide">Home</a>
             <a href="/ml" class="w3-bar-item w3-button w3-padding-large w3-medium w3-hover-dark-grey w3-wide">Machine Learning</a>
@@ -42,11 +42,12 @@
 
     {% block content %}{% endblock %}
     
-    <footer class="w3-container w3-blue-grey w3-padding-32 w3-center">
+    <footer class="w3-container w3-dark-grey w3-padding-32 w3-center">
         <div class="w3-xlarge w3-padding-32">
-            <i href="#" class="fa fa-facebook w3-hover-opacity"></i>
+            <a href="https://github.com/Doometnick" target=_blank><i class="fa fa-github w3-hover-opacity"></i></a>
+            <!-- <i href="#" class="fa fa-facebook w3-hover-opacity"></i> -->
             <a href="https://www.instagram.com/dominique_bra/" target=_blank><i class="fa fa-instagram w3-hover-opacity"></i></a>
-            <i href="#" class="fa fa-linkedin w3-hover-opacity"></i>
+            <a href="https://www.linkedin.com/in/dominique-brandl-46883340/" target=_blank><i class="fa fa-linkedin w3-hover-opacity"></i></a>
         </div>
         <p><a class="w3-hover-opacity" href="#">Contact</a></p>
     </footer>
